// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new message reducer NEW_MESSAGE_RESET_FROM_MESSAGE should remove email extra from the content 1`] = `
{
  "_internal": {
    "loading": {
      "addAttachment": false,
      "submitMessage": false,
    },
  },
  "newMessage": {
    "actions": [],
    "attachments": [],
    "body_html": "<div><br></div>",
    "body_text": "",
    "channel": "email",
    "from_agent": true,
    "macros": [],
    "mention_ids": [],
    "public": true,
    "sender": {},
    "source": {
      "bcc": [],
      "cc": [],
      "extra": {
        "include_thread": false,
      },
      "from": {},
      "to": [],
      "type": "email",
    },
    "subject": "",
    "via": "helpdesk",
  },
  "state": {
    "appliedMacro": null,
    "cacheAdded": true,
    "contentState": {
      "blockMap": {
        "someRandomKey": {
          "characterList": [],
          "data": {},
          "depth": 0,
          "key": "someRandomKey",
          "text": "",
          "type": "unstyled",
        },
      },
      "entityMap": {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "selectionAfter": {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "hasFocus": false,
        "isBackward": false,
      },
      "selectionBefore": {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "hasFocus": false,
        "isBackward": false,
      },
    },
    "dirty": false,
    "emailExtraAdded": false,
    "firstNewMessage": true,
    "forceFocus": true,
    "forceUpdate": true,
    "inserted_discounts": [],
    "selectionState": {
      "anchorKey": "someRandomKey",
      "anchorOffset": 0,
      "focusKey": "someRandomKey",
      "focusOffset": 0,
      "hasFocus": false,
      "isBackward": false,
    },
  },
}
`;

exports[`new message reducer NEW_MESSAGE_RESET_FROM_MESSAGE should reset the state from a message 1`] = `
{
  "_internal": {
    "loading": {
      "addAttachment": false,
      "submitMessage": false,
    },
  },
  "newMessage": {
    "actions": [],
    "attachments": [],
    "body_html": "<div>foobar</div>",
    "body_text": "foobar",
    "channel": "email",
    "from_agent": true,
    "macros": [],
    "mention_ids": [],
    "public": true,
    "sender": {},
    "source": {
      "bcc": [],
      "cc": [],
      "extra": {
        "include_thread": false,
      },
      "from": {},
      "to": [],
      "type": "email",
    },
    "subject": "",
    "via": "helpdesk",
  },
  "state": {
    "appliedMacro": null,
    "cacheAdded": true,
    "contentState": {
      "blockMap": {
        "someRandomKey": {
          "characterList": [
            {
              "entity": null,
              "style": [],
            },
            {
              "entity": null,
              "style": [],
            },
            {
              "entity": null,
              "style": [],
            },
            {
              "entity": null,
              "style": [],
            },
            {
              "entity": null,
              "style": [],
            },
            {
              "entity": null,
              "style": [],
            },
          ],
          "data": {},
          "depth": 0,
          "key": "someRandomKey",
          "text": "foobar",
          "type": "unstyled",
        },
      },
      "entityMap": {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "selectionAfter": {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "hasFocus": false,
        "isBackward": false,
      },
      "selectionBefore": {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "hasFocus": false,
        "isBackward": false,
      },
    },
    "dirty": false,
    "emailExtraAdded": true,
    "firstNewMessage": true,
    "forceFocus": true,
    "forceUpdate": true,
    "inserted_discounts": [],
    "selectionState": {
      "anchorKey": "someRandomKey",
      "anchorOffset": 0,
      "focusKey": "someRandomKey",
      "focusOffset": 0,
      "hasFocus": false,
      "isBackward": false,
    },
  },
}
`;

exports[`new message reducer NEW_MESSAGE_SET_SOURCE_EXTRA should set source extra 1`] = `
{
  "foo": "bar",
  "include_thread": false,
}
`;

exports[`new message reducer SET_NEW_MESSAGE_DISCOUNT_CODE should append to discount codes 1`] = `
Immutable.List [
  Immutable.Map {
    "id": 1,
    "title": "Code 1",
    "summary": "Very good discount coupon",
    "code": "code_1",
    "shareable_url": "https://test.iooo",
  },
]
`;

exports[`new message reducer SET_RESPONSE_TEXT action should add cache 1`] = `
{
  "action": {
    "args": Immutable.Map {
      "contentState": "<div>Hello</div>",
    },
    "type": "setResponseText",
  },
  "appliedMacro": undefined,
  "cacheAdded": true,
  "contentState": "<div>Hello</div>",
  "emailExtraAdded": false,
  "forceFocus": undefined,
  "forceUpdate": undefined,
  "inserted_discounts": null,
  "sourceType": "email",
  "state": Immutable.Map {
    "state": Immutable.Map {
      "selectionState": null,
      "inserted_discounts": Immutable.List [],
      "emailExtraAdded": false,
      "forceFocus": false,
      "appliedMacro": null,
      "dirty": false,
      "forceUpdate": false,
      "firstNewMessage": true,
      "contentState": "<div><br></div>",
      "cacheAdded": true,
    },
    "_internal": Immutable.Map {
      "loading": Immutable.Map {
        "addAttachment": false,
        "submitMessage": false,
      },
    },
    "newMessage": Immutable.Map {
      "channel": "email",
      "mention_ids": Immutable.List [],
      "macros": Immutable.List [],
      "body_html": "",
      "public": true,
      "body_text": "",
      "subject": "",
      "via": "helpdesk",
      "from_agent": true,
      "attachments": Immutable.List [],
      "sender": null,
      "source": Immutable.Map {
        "type": "email",
        "from": Immutable.Map {},
        "to": Immutable.List [],
        "cc": Immutable.List [],
        "bcc": Immutable.List [],
        "extra": Immutable.Map {
          "include_thread": false,
        },
      },
    },
  },
  "topRankMacroState": undefined,
}
`;

exports[`new message reducer SET_RESPONSE_TEXT action should not restore inserted_discounts from context if value is null 1`] = `
Immutable.Map {
  "state": Immutable.Map {
    "selectionState": null,
    "inserted_discounts": Immutable.List [
      Immutable.Map {
        "id": 4,
        "code": "FREEBIE",
        "title": "Freebie title",
        "summary": "Freebie discount",
        "shareable_url": "https://acme.gorgias.io/freebie",
      },
    ],
    "emailExtraAdded": false,
    "forceFocus": false,
    "appliedMacro": null,
    "dirty": true,
    "forceUpdate": false,
    "firstNewMessage": true,
    "contentState": Immutable.Record {
      "entityMap": {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "someRandomKey": Immutable.Record {
          "key": "someRandomKey",
          "type": "unstyled",
          "text": "Hello",
          "characterList": Immutable.List [
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
          ],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    },
    "cacheAdded": false,
  },
  "_internal": Immutable.Map {
    "loading": Immutable.Map {
      "addAttachment": false,
      "submitMessage": false,
    },
  },
  "newMessage": Immutable.Map {
    "channel": "email",
    "mention_ids": Immutable.List [],
    "macros": Immutable.List [],
    "body_html": "<div>Hello</div>",
    "public": true,
    "body_text": "Hello",
    "subject": "",
    "via": "helpdesk",
    "from_agent": true,
    "attachments": Immutable.List [],
    "sender": null,
    "source": Immutable.Map {
      "type": "email",
      "from": Immutable.Map {},
      "to": Immutable.List [],
      "cc": Immutable.List [],
      "bcc": Immutable.List [],
      "extra": Immutable.Map {
        "include_thread": false,
      },
    },
  },
}
`;

exports[`new message reducer SET_RESPONSE_TEXT action should restore emailExtraAdded from context 1`] = `
Immutable.Map {
  "state": Immutable.Map {
    "selectionState": null,
    "inserted_discounts": Immutable.List [],
    "emailExtraAdded": false,
    "forceFocus": false,
    "appliedMacro": null,
    "dirty": true,
    "forceUpdate": false,
    "firstNewMessage": true,
    "contentState": Immutable.Record {
      "entityMap": {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "someRandomKey": Immutable.Record {
          "key": "someRandomKey",
          "type": "unstyled",
          "text": "Hello",
          "characterList": Immutable.List [
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
          ],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    },
    "cacheAdded": false,
  },
  "_internal": Immutable.Map {
    "loading": Immutable.Map {
      "addAttachment": false,
      "submitMessage": false,
    },
  },
  "newMessage": Immutable.Map {
    "channel": "email",
    "mention_ids": Immutable.List [],
    "macros": Immutable.List [],
    "body_html": "<div>Hello</div>",
    "public": true,
    "body_text": "Hello",
    "subject": "",
    "via": "helpdesk",
    "from_agent": true,
    "attachments": Immutable.List [],
    "sender": null,
    "source": Immutable.Map {
      "type": "email",
      "from": Immutable.Map {},
      "to": Immutable.List [],
      "cc": Immutable.List [],
      "bcc": Immutable.List [],
      "extra": Immutable.Map {
        "include_thread": false,
      },
    },
  },
}
`;

exports[`new message reducer SET_RESPONSE_TEXT action should restore inserted_discounts from context 1`] = `
Immutable.Map {
  "state": Immutable.Map {
    "selectionState": null,
    "inserted_discounts": Immutable.List [
      Immutable.Map {
        "id": 5,
        "code": "FREEBIE",
        "title": "Freebie title",
        "summary": "Freebie discount",
        "shareable_url": "https://acme.gorgias.io/freebie",
      },
    ],
    "emailExtraAdded": false,
    "forceFocus": false,
    "appliedMacro": null,
    "dirty": true,
    "forceUpdate": false,
    "firstNewMessage": true,
    "contentState": Immutable.Record {
      "entityMap": {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "someRandomKey": Immutable.Record {
          "key": "someRandomKey",
          "type": "unstyled",
          "text": "Hello",
          "characterList": Immutable.List [
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
          ],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    },
    "cacheAdded": false,
  },
  "_internal": Immutable.Map {
    "loading": Immutable.Map {
      "addAttachment": false,
      "submitMessage": false,
    },
  },
  "newMessage": Immutable.Map {
    "channel": "email",
    "mention_ids": Immutable.List [],
    "macros": Immutable.List [],
    "body_html": "<div>Hello</div>",
    "public": true,
    "body_text": "Hello",
    "subject": "",
    "via": "helpdesk",
    "from_agent": true,
    "attachments": Immutable.List [],
    "sender": null,
    "source": Immutable.Map {
      "type": "email",
      "from": Immutable.Map {},
      "to": Immutable.List [],
      "cc": Immutable.List [],
      "bcc": Immutable.List [],
      "extra": Immutable.Map {
        "include_thread": false,
      },
    },
  },
}
`;

exports[`new message reducer SET_RESPONSE_TEXT action should return remove stripped_text and stripped_html if email extra was removed from the content state 1`] = `
Immutable.Map {
  "state": Immutable.Map {
    "selectionState": null,
    "inserted_discounts": Immutable.List [],
    "emailExtraAdded": false,
    "forceFocus": false,
    "appliedMacro": null,
    "dirty": false,
    "forceUpdate": false,
    "firstNewMessage": true,
    "contentState": Immutable.Record {
      "entityMap": {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "someRandomKey": Immutable.Record {
          "key": "someRandomKey",
          "type": "unstyled",
          "text": "",
          "characterList": Immutable.List [],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    },
    "cacheAdded": true,
  },
  "_internal": Immutable.Map {
    "loading": Immutable.Map {
      "addAttachment": false,
      "submitMessage": false,
    },
  },
  "newMessage": Immutable.Map {
    "channel": "email",
    "mention_ids": Immutable.List [],
    "macros": Immutable.List [],
    "body_html": "<div><br></div>",
    "public": true,
    "body_text": "",
    "subject": "",
    "via": "helpdesk",
    "from_agent": true,
    "attachments": Immutable.List [],
    "sender": null,
    "source": Immutable.Map {
      "type": "email",
      "from": Immutable.Map {},
      "to": Immutable.List [],
      "cc": Immutable.List [],
      "bcc": Immutable.List [],
      "extra": Immutable.Map {
        "include_thread": false,
      },
    },
  },
}
`;

exports[`new message reducer SET_RESPONSE_TEXT action should set emailExtraAdded from args 1`] = `
Immutable.Map {
  "state": Immutable.Map {
    "selectionState": null,
    "inserted_discounts": Immutable.List [],
    "emailExtraAdded": false,
    "forceFocus": false,
    "appliedMacro": null,
    "dirty": false,
    "forceUpdate": false,
    "firstNewMessage": true,
    "contentState": Immutable.Record {
      "entityMap": {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "someRandomKey": Immutable.Record {
          "key": "someRandomKey",
          "type": "unstyled",
          "text": "",
          "characterList": Immutable.List [],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    },
    "cacheAdded": true,
  },
  "_internal": Immutable.Map {
    "loading": Immutable.Map {
      "addAttachment": false,
      "submitMessage": false,
    },
  },
  "newMessage": Immutable.Map {
    "channel": "email",
    "mention_ids": Immutable.List [],
    "macros": Immutable.List [],
    "body_html": "<div><br></div>",
    "public": true,
    "body_text": "",
    "subject": "",
    "via": "helpdesk",
    "from_agent": true,
    "attachments": Immutable.List [],
    "sender": null,
    "source": Immutable.Map {
      "type": "email",
      "from": Immutable.Map {},
      "to": Immutable.List [],
      "cc": Immutable.List [],
      "bcc": Immutable.List [],
      "extra": Immutable.Map {
        "include_thread": false,
      },
    },
  },
}
`;

exports[`new message reducer SET_RESPONSE_TEXT action should update content state when email extra data was updated 1`] = `
Immutable.Map {
  "state": Immutable.Map {
    "selectionState": null,
    "inserted_discounts": Immutable.List [],
    "emailExtraAdded": false,
    "forceFocus": false,
    "appliedMacro": null,
    "dirty": false,
    "forceUpdate": true,
    "firstNewMessage": true,
    "contentState": Immutable.Record {
      "entityMap": {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "someRandomKey": Immutable.Record {
          "key": "someRandomKey",
          "type": "unstyled",
          "text": "",
          "characterList": Immutable.List [],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    },
    "cacheAdded": true,
  },
  "_internal": Immutable.Map {
    "loading": Immutable.Map {
      "addAttachment": false,
      "submitMessage": false,
    },
  },
  "newMessage": Immutable.Map {
    "channel": "email",
    "mention_ids": Immutable.List [],
    "macros": Immutable.List [],
    "body_html": "<div><br></div>",
    "public": true,
    "body_text": "",
    "subject": "",
    "via": "helpdesk",
    "from_agent": true,
    "attachments": Immutable.List [],
    "sender": null,
    "source": Immutable.Map {
      "type": "email",
      "from": Immutable.Map {},
      "to": Immutable.List [],
      "cc": Immutable.List [],
      "bcc": Immutable.List [],
      "extra": Immutable.Map {
        "include_thread": false,
      },
    },
  },
}
`;

exports[`new message reducer should handle NEW_MESSAGE_SET_SUBJECT 1`] = `
Immutable.Map {
  "state": Immutable.Map {
    "selectionState": null,
    "inserted_discounts": Immutable.List [],
    "emailExtraAdded": false,
    "forceFocus": false,
    "appliedMacro": null,
    "dirty": false,
    "forceUpdate": false,
    "firstNewMessage": true,
    "contentState": Immutable.Record {
      "entityMap": {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "someRandomKey": Immutable.Record {
          "key": "someRandomKey",
          "type": "unstyled",
          "text": "",
          "characterList": Immutable.List [],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    },
    "cacheAdded": false,
  },
  "_internal": Immutable.Map {
    "loading": Immutable.Map {
      "addAttachment": false,
      "submitMessage": false,
    },
  },
  "newMessage": Immutable.Map {
    "channel": "email",
    "mention_ids": Immutable.List [],
    "macros": Immutable.List [],
    "body_html": "",
    "public": true,
    "body_text": "",
    "subject": "Hello World!",
    "via": "helpdesk",
    "from_agent": true,
    "attachments": Immutable.List [],
    "sender": null,
    "source": Immutable.Map {
      "type": "email",
      "from": Immutable.Map {},
      "to": Immutable.List [],
      "cc": Immutable.List [],
      "bcc": Immutable.List [],
      "extra": Immutable.Map {
        "include_thread": false,
      },
    },
  },
}
`;
